--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "scripts": {
     "build-contract": "solc contracts/Gravity.sol --abi -o abis --overwrite && solc contracts/Gravity.sol --bin -o bin --overwrite",
-    "create": "graph create juliankoh/keep_network_subgraph --node https://api.thegraph.com/deploy/",
-    "create-local": "graph create juliankoh/keep_network_subgraph --node http://127.0.0.1:8020",
+    "create": "graph create juliankoh/keep-network --node https://api.thegraph.com/deploy/",
+    "create-local": "graph create juliankoh/keep-network --node http://127.0.0.1:8020",
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy juliankoh/keep-network --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
