--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "deploy": "graph deploy juliankoh/keep-network --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
-    "deploy-local": "graph deploy juliankoh/keep-network --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
+    "deploy-local": "graph deploy juliankoh/keep-network --ipfs http://localhost:5001 --node http://127.0.0.1:8020",
+    "view-local": "cd graphiql && httpserver"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.18.0",
-    "@graphprotocol/graph-ts": "^0.18.0"
+    "@graphprotocol/graph-ts": "^0.18.0",
+    "httpserver": "^0.3.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
